Made Schemas for the JSON files used in REST API, modified code to adhere to it
