# api/swagger.yaml
@@ -94,13 +94,16 @@ paths:
           description: |
             Entries to be processed as JSON file. Only key in JSON file is
             "data," which contains the entries to be run written as strings
-          type: string
           required: true
+          schema:
+            $ref: "#/definitions/Dataset"
       produces:
         - application/json
       responses:
         200:
           description: Successful response
+          schema:
+            $ref: "#/definitions/Dataset"
         405:
           description: Some problem in running the attribute generation
 
@@ -126,6 +129,8 @@ paths:
       responses:
         200:
           description: Successful response
+          schema:
+            $ref: '$/definitions/Dataset"
         405:
           description: Some problem in running the attribute generation
 
@@ -145,7 +150,7 @@ paths:
             Dataset used by model must support data of this type. For example, data
             that is comptabile with a
             [CrystalStructureDataset](http://oqmd.org/static/analytics/magpie/javadoc/magpie/data/materials/CrystalStructureDataset.html)
-            (i.e., has infomration about a crystal structure) is also compatible with a
+            (i.e., has information about a crystal structure) is also compatible with a
             [CompositionDataset](http://oqmd.org/static/analytics/magpie/javadoc/magpie/data/materials/CompositionDataset.html)
           required: false
           type: string
@@ -154,3 +159,65 @@ paths:
           description: Succesful response
         400:
           description: Some problem with
+
+definitions:
+  Dataset:
+    type: object
+    description: |
+      Holds a collections of entries to be processed by,
+      or that were generated by Magpie
+    properties:
+      attributes:
+        type: array
+        description: Names of attributes
+        items:
+          type: string
+      entries:
+        type: array
+        description: Entries of this dataset
+        items:
+          $ref: "#/definitions/Dataset"
+      property:
+        type: string
+        description: Name of the property being predicted
+      units:
+        type: string
+        description: Units of the predicted property
+      possibleClasses:
+        type: array
+        description: For a classification model, names of the possible classes
+        items:
+          type: string
+
+  Entry:
+    type: object
+    description: |
+      A single entry in a dataset
+    properties:
+      name:
+        type: string
+        description: Name of the the entry
+      parsedName:
+        type: string
+        description: |
+          Name of the entry, as generated by Magpie. Useful for determining
+          whether the entry parsed correctly
+      classProbabilities:
+        type: array
+        description: |
+          Predicted probability that entry will be in each class,
+          output of machine learning model
+        items:
+          type: number
+          format: double
+      predictedValue:
+        description: |
+          Predicted value, output of a machine learning model
+        type: number
+        format: double
+      attributes:
+        description: Attributes for this entry, input for a machine learning model
+        type: array
+        items:
+          type: number
+          format: double
